--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,188 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --primary-color: #37DACA;
+  /* --secondary-color: #9bc400; */
+}
+
+.image-container {
+  width: 100%;
+}.image-container div {
+    position: unset !important;
+  }
+  .image {
+    object-fit: contain;
+    width: 100% !important;
+    position: relative !important;
+    height: unset !important;
+  }
+
+/* Navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: white;
+}
+
+.nav-logo{
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  flex: 1;
+}
+
+.links {
+  flex: 1;
+  justify-content: flex-end;
+  display: flex;
+  text-decoration: none;
+  margin-left: 1rem; 
+}
+.links span:hover {
+  color: var(--primary-color);
+}
+
+.links-container {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  /* Add the media query styles */
+  .links-container {
+    flex-direction: column; /* Change flex direction to column on smaller screens */
+    align-items: flex-start; /* Align items to the start vertically */
+  }
+
+  .links {
+    margin: 0.5rem 0; /* Adjust margin for smaller screens */
+  }
+}
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .logo,
+  .links {
+    width: 100%;
+    text-align: center;
+  }
+
+  .links {
+    margin-top: 1rem;
+    justify-content: center;
+  }
+
+  .links span {
+    display: block;
+    margin: 0.5rem 0;
+  }
+}
+
+/* header */
+.header-title {
+  background-color: rgba(60, 188, 217, 0.236) ;/* See-through white */
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; 
+
+  font-size: 2rem;
+
+}
+
+/* challenge */
+
+.container-issue {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.left-issue,
+.right-issue {
+  padding: 1rem;
+  background-color: white;
+}
+
+.left-issue ul,
+.right-issue ul {
+  list-style: none;
+  padding: 0;
+}
+
+.left-issue li,
+.right-issue li {
+  margin-bottom: 0.5rem;
+}
+
+/* HowItWorks.module.css */
+.HIWcontainer {
+  padding: 1rem;
+}
+
+.HIWheading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.HIWstepsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.HIWstep {
+  flex: 1 1 48%; /* Each step takes up 48% of the container width */
+  background-color: #ffffff;
+  padding: 1rem;
+  margin-bottom: 1rem;
+}
+
+.HIWstepTitle {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+/* Mobile-friendly styles */
+@media (max-width: 768px) {
+  .HIWstep {
+    flex-basis: 100%; /* Each step takes up 100% of the container width on smaller screens */
+  }
+}
+
+/* FAQ */
+
+.underline {
+  position: relative;
+}
+
+.underline::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -3px; /* Adjust the value to change the underline thickness */
+  width: 100%;
+  height: 2px; /* Adjust the value to change the underline thickness */
+  background-color: var(--primary-color); /* Use the primary color for the underline */
+}
+
+
 html,
 body {
   padding: 0;
